# labs_second_semestr

./: README.md
Lab4Cmake/: CMakeLists.txt  L4  Lab4Cmake.cpp  Lab4Cmake.h
Lab4Cmake/lib/: muparser.lib
lab_1/: Mouchip.cpp  Mouchip2.cpp  decoded.txt  mouchip.cpp  mouchip2.cpp
lab_2/: L2  L2.cpp  input.txt
lab_4/: L4  L4.cpp
Лабораторная работа 3/: CMakeLists.txt  L3  main.cpp
